# autoware.universe

./: .clang-tidy-ci  .cspell.json  build_depends_humble.repos  build_depends_nightly.repos  build_depends_stable.repos  codecov.yaml
common/autoware_agnocast_wrapper/: CMakeLists.txt  package.xml
common/autoware_agnocast_wrapper/include/autoware/agnocast_wrapper/: autoware_agnocast_wrapper.hpp
common/autoware_boundary_departure_checker/: CMakeLists.txt  package.xml
common/autoware_boundary_departure_checker/include/autoware/boundary_departure_checker/: boundary_departure_checker.hpp  conversion.hpp  data_structs.hpp  debug.hpp  parameters.hpp  steering_abnormality_utils.hpp  uncrossable_boundary_departure_checker.hpp  utils.hpp
common/autoware_boundary_departure_checker/src/: boundary_departure_checker.cpp  debug.cpp  steering_abnormality_utils.cpp  uncrossable_boundary_departure_checker.cpp  utils.cpp
common/autoware_boundary_departure_checker/src/footprint_generator/: footprint_manager.cpp  localization_footprint.cpp  longitudinal_footprint.cpp  normal_footprint.cpp  steering_footprint.cpp
common/autoware_boundary_departure_checker/test/: test_create_vehicle_footprints.cpp  test_uncrossable_boundary_checker.cpp
common/autoware_boundary_departure_checker/test/utils/: test_get_closest_projections.cpp
control/autoware_spheric_collision_detector/: CMakeLists.txt  README.md  package.xml
control/autoware_spheric_collision_detector/config/: spheric_collision_detector.param.yaml
control/autoware_spheric_collision_detector/include/autoware/spheric_collision_detector/: sphere3.hpp  spheric_collision_detector.hpp  (+1 more)
control/autoware_spheric_collision_detector/launch/: spheric_collision_detector.launch.xml
control/autoware_spheric_collision_detector/schema/: autoware_spheric_collision_detector.json
control/autoware_spheric_collision_detector/src/spheric_collision_detector_node/: sphere3.cpp  spheric_collision_detector.cpp  spheric_collision_detector_node.cpp
control/autoware_spheric_collision_detector/test/: test_spheric_collision_detector.cpp
evaluator/autoware_evaluation_adapter/: CMakeLists.txt  README.md  package.xml
evaluator/autoware_evaluation_adapter/launch/: evaluation_adapter.launch.xml  namespace.launch.py
evaluator/autoware_evaluation_adapter/src/: autoware_engage.cpp  autoware_engage.hpp  velocity_limit.cpp  velocity_limit.hpp
evaluator/autoware_evaluation_adapter/src/utils/: client.hpp  response.hpp
perception/autoware_detected_object_feature_remover/: CMakeLists.txt  package.xml
perception/autoware_detected_object_feature_remover/design/: DetectedObjectFeatureRemover.node.yaml
perception/autoware_detected_object_feature_remover/launch/: detected_object_feature_remover.launch.xml
perception/autoware_detected_object_feature_remover/src/: detected_object_feature_remover_node.cpp  detected_object_feature_remover_node.hpp
perception/autoware_detection_by_tracker/: CMakeLists.txt  package.xml
perception/autoware_detection_by_tracker/launch/: detection_by_tracker.launch.xml
perception/autoware_detection_by_tracker/src/: detection_by_tracker_node.cpp  detection_by_tracker_node.hpp
perception/autoware_detection_by_tracker/src/debugger/: debugger.hpp
perception/autoware_ground_segmentation_cuda/: CMakeLists.txt  README.md  package.xml
perception/autoware_ground_segmentation_cuda/config/: cuda_scan_ground_segmentation_filter.param.yaml
perception/autoware_ground_segmentation_cuda/launch/: cuda_scan_ground_filter.launch.py
perception/autoware_ground_segmentation_cuda/schema/: cuda_scan_ground_segmentation_filter.schema.json
perception/autoware_ground_segmentation_cuda/src/cuda_scan_ground_segmentation/: cuda_scan_ground_segmentation_filter.cu  cuda_scan_ground_segmentation_filter_node.cpp
perception/autoware_lidar_apollo_instance_segmentation/: CMakeLists.txt  package.xml
perception/autoware_lidar_apollo_instance_segmentation/config/: hdl-64.param.yaml  vlp-16.param.yaml  vls-128.param.yaml
perception/autoware_lidar_apollo_instance_segmentation/design/: LidarApolloInstanceSegmentation.node.yaml
perception/autoware_lidar_apollo_instance_segmentation/schema/: vlp-16.schema.json  vls-128.schema.json
perception/autoware_lidar_apollo_instance_segmentation/src/: cluster2d.cpp
perception/autoware_raindrop_cluster_filter/: CMakeLists.txt  package.xml
perception/autoware_raindrop_cluster_filter/design/: LowIntensityClusterFilter.node.yaml
perception/autoware_raindrop_cluster_filter/launch/: low_intensity_cluster_filter.launch.xml
perception/autoware_raindrop_cluster_filter/src/: low_intensity_cluster_filter_node.cpp  low_intensity_cluster_filter_node.hpp
planning/autoware_manual_lane_change_handler/: CMakeLists.txt  README.md  package.xml
planning/autoware_manual_lane_change_handler/launch/: manual_lane_change_handler.launch.xml
planning/autoware_manual_lane_change_handler/src/: manual_lane_change_handler.cpp  manual_lane_change_handler.hpp
planning/autoware_trajectory_modifier/: CMakeLists.txt  README.md  package.xml  plugins.xml
planning/autoware_trajectory_modifier/config/: trajectory_modifier.param.yaml
planning/autoware_trajectory_modifier/launch/: trajectory_modifier.launch.xml
planning/autoware_trajectory_modifier/param/: trajectory_modifier_parameter_struct.yaml
planning/autoware_trajectory_modifier/schema/: trajectory_modifier.schema.json
planning/autoware_trajectory_modifier/src/: trajectory_modifier.cpp
planning/autoware_trajectory_modifier/src/trajectory_modifier_plugins/: obstacle_stop.cpp  stop_point_fixer.cpp
planning/autoware_trajectory_modifier/src/trajectory_modifier_utils/: obstacle_stop_utils.cpp  utils.cpp
planning/autoware_trajectory_modifier/tests/: test_stop_point_fixer_integration.cpp  test_utils.cpp
sensing/autoware_radar_objects_adapter/: CMakeLists.txt  package.xml
sensing/autoware_radar_objects_adapter/src/: radar_objects_adapter.cpp
system/autoware_topic_relay_controller/: CMakeLists.txt  package.xml
visualization/tier4_perception_rviz_plugin/: CMakeLists.txt
(+1198 files in other folders)
